pa4/src/antlr/CalculatorParser.cpp

// Generated from Calculator.g4 by ANTLR 4.13.1


#include "CalculatorVisitor.h"

#include "CalculatorParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CalculatorParserStaticData final {
  CalculatorParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CalculatorParserStaticData(const CalculatorParserStaticData&) = delete;
  CalculatorParserStaticData(CalculatorParserStaticData&&) = delete;
  CalculatorParserStaticData& operator=(const CalculatorParserStaticData&) = delete;
  CalculatorParserStaticData& operator=(CalculatorParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag calculatorParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CalculatorParserStaticData *calculatorParserStaticData = nullptr;

void calculatorParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (calculatorParserStaticData != nullptr) {
    return;
  }
#else
  assert(calculatorParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CalculatorParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "assignment", "block", "printStmt", "expr"
    },
    std::vector<std::string>{
      "", "'='", "';'", "'{'", "'}'", "'print'", "'('", "')'", "", "", "'*'", 
      "'/'", "'%'", "'+'", "'-'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "INT", "ID", "MUL", "DIV", "MOD", 
      "PLUS", "MINUS", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  calculatorParserStaticData = staticData.release();
}

}

CalculatorParser::CalculatorParser(TokenStream *input) : CalculatorParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CalculatorParser::CalculatorParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CalculatorParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *calculatorParserStaticData->atn, calculatorParserStaticData->decisionToDFA, calculatorParserStaticData->sharedContextCache, options);
}

CalculatorParser::~CalculatorParser() {
  delete _interpreter;
}

const atn::ATN& CalculatorParser::getATN() const {
  return *calculatorParserStaticData->atn;
}

std::string CalculatorParser::getGrammarFileName() const {
  return "Calculator.g4";
}

const std::vector<std::string>& CalculatorParser::getRuleNames() const {
  return calculatorParserStaticData->ruleNames;
}

const dfa::Vocabulary& CalculatorParser::getVocabulary() const {
  return calculatorParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CalculatorParser::getSerializedATN() const {
  return calculatorParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CalculatorParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CalculatorParser::ProgramContext::EOF() {
  return getToken(CalculatorParser::EOF, 0);
}

std::vector<CalculatorParser::StatementContext *> CalculatorParser::ProgramContext::statement() {
  return getRuleContexts<CalculatorParser::StatementContext>();
}

CalculatorParser::StatementContext* CalculatorParser::ProgramContext::statement(size_t i) {
  return getRuleContext<CalculatorParser::StatementContext>(i);
}


size_t CalculatorParser::ProgramContext::getRuleIndex() const {
  return CalculatorParser::RuleProgram;
}


std::any CalculatorParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::ProgramContext* CalculatorParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CalculatorParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(13); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(12);
      statement();
      setState(15); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 552) != 0));
    setState(17);
    match(CalculatorParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CalculatorParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::AssignmentContext* CalculatorParser::StatementContext::assignment() {
  return getRuleContext<CalculatorParser::AssignmentContext>(0);
}

CalculatorParser::BlockContext* CalculatorParser::StatementContext::block() {
  return getRuleContext<CalculatorParser::BlockContext>(0);
}

CalculatorParser::PrintStmtContext* CalculatorParser::StatementContext::printStmt() {
  return getRuleContext<CalculatorParser::PrintStmtContext>(0);
}


size_t CalculatorParser::StatementContext::getRuleIndex() const {
  return CalculatorParser::RuleStatement;
}


std::any CalculatorParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::StatementContext* CalculatorParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CalculatorParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(22);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CalculatorParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(19);
        assignment();
        break;
      }

      case CalculatorParser::T__2: {
        enterOuterAlt(_localctx, 2);
        setState(20);
        block();
        break;
      }

      case CalculatorParser::T__4: {
        enterOuterAlt(_localctx, 3);
        setState(21);
        printStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

CalculatorParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CalculatorParser::AssignmentContext::ID() {
  return getToken(CalculatorParser::ID, 0);
}

CalculatorParser::ExprContext* CalculatorParser::AssignmentContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}


size_t CalculatorParser::AssignmentContext::getRuleIndex() const {
  return CalculatorParser::RuleAssignment;
}


std::any CalculatorParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::AssignmentContext* CalculatorParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, CalculatorParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    match(CalculatorParser::ID);
    setState(25);
    match(CalculatorParser::T__0);
    setState(26);
    expr(0);
    setState(27);
    match(CalculatorParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CalculatorParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CalculatorParser::StatementContext *> CalculatorParser::BlockContext::statement() {
  return getRuleContexts<CalculatorParser::StatementContext>();
}

CalculatorParser::StatementContext* CalculatorParser::BlockContext::statement(size_t i) {
  return getRuleContext<CalculatorParser::StatementContext>(i);
}


size_t CalculatorParser::BlockContext::getRuleIndex() const {
  return CalculatorParser::RuleBlock;
}


std::any CalculatorParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::BlockContext* CalculatorParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, CalculatorParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    match(CalculatorParser::T__2);
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 552) != 0)) {
      setState(30);
      statement();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(36);
    match(CalculatorParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

CalculatorParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::ExprContext* CalculatorParser::PrintStmtContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}


size_t CalculatorParser::PrintStmtContext::getRuleIndex() const {
  return CalculatorParser::RulePrintStmt;
}


std::any CalculatorParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::PrintStmtContext* CalculatorParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, CalculatorParser::RulePrintStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(CalculatorParser::T__4);
    setState(39);
    expr(0);
    setState(40);
    match(CalculatorParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

CalculatorParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CalculatorParser::ExprContext::getRuleIndex() const {
  return CalculatorParser::RuleExpr;
}

void CalculatorParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IntExprContext ------------------------------------------------------------------

tree::TerminalNode* CalculatorParser::IntExprContext::INT() {
  return getToken(CalculatorParser::INT, 0);
}

CalculatorParser::IntExprContext::IntExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::IntExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitIntExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulExprContext ------------------------------------------------------------------

std::vector<CalculatorParser::ExprContext *> CalculatorParser::MulExprContext::expr() {
  return getRuleContexts<CalculatorParser::ExprContext>();
}

CalculatorParser::ExprContext* CalculatorParser::MulExprContext::expr(size_t i) {
  return getRuleContext<CalculatorParser::ExprContext>(i);
}

tree::TerminalNode* CalculatorParser::MulExprContext::MUL() {
  return getToken(CalculatorParser::MUL, 0);
}

tree::TerminalNode* CalculatorParser::MulExprContext::DIV() {
  return getToken(CalculatorParser::DIV, 0);
}

tree::TerminalNode* CalculatorParser::MulExprContext::MOD() {
  return getToken(CalculatorParser::MOD, 0);
}

CalculatorParser::MulExprContext::MulExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::MulExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitMulExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LvalExprContext ------------------------------------------------------------------

tree::TerminalNode* CalculatorParser::LvalExprContext::ID() {
  return getToken(CalculatorParser::ID, 0);
}

CalculatorParser::LvalExprContext::LvalExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::LvalExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitLvalExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExprContext ------------------------------------------------------------------

CalculatorParser::ExprContext* CalculatorParser::ParenExprContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}

CalculatorParser::ParenExprContext::ParenExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::ParenExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitParenExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PlusExprContext ------------------------------------------------------------------

std::vector<CalculatorParser::ExprContext *> CalculatorParser::PlusExprContext::expr() {
  return getRuleContexts<CalculatorParser::ExprContext>();
}

CalculatorParser::ExprContext* CalculatorParser::PlusExprContext::expr(size_t i) {
  return getRuleContext<CalculatorParser::ExprContext>(i);
}

tree::TerminalNode* CalculatorParser::PlusExprContext::PLUS() {
  return getToken(CalculatorParser::PLUS, 0);
}

tree::TerminalNode* CalculatorParser::PlusExprContext::MINUS() {
  return getToken(CalculatorParser::MINUS, 0);
}

CalculatorParser::PlusExprContext::PlusExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::PlusExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitPlusExpr(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::ExprContext* CalculatorParser::expr() {
   return expr(0);
}

CalculatorParser::ExprContext* CalculatorParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CalculatorParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  CalculatorParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, CalculatorParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CalculatorParser::T__5: {
        _localctx = _tracker.createInstance<ParenExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(43);
        match(CalculatorParser::T__5);
        setState(44);
        expr(0);
        setState(45);
        match(CalculatorParser::T__6);
        break;
      }

      case CalculatorParser::ID: {
        _localctx = _tracker.createInstance<LvalExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(47);
        match(CalculatorParser::ID);
        break;
      }

      case CalculatorParser::INT: {
        _localctx = _tracker.createInstance<IntExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(48);
        match(CalculatorParser::INT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(59);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(57);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MulExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(51);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(52);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 7168) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(53);
          expr(3);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<PlusExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(54);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(55);
          _la = _input->LA(1);
          if (!(_la == CalculatorParser::PLUS

          || _la == CalculatorParser::MINUS)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(56);
          expr(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(61);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

bool CalculatorParser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 5: return exprSempred(antlrcpp::downCast<ExprContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool CalculatorParser::exprSempred(ExprContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 2);
    case 1: return precpred(_ctx, 1);

  default:
    break;
  }
  return true;
}

void CalculatorParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  calculatorParserInitialize();
#else
  ::antlr4::internal::call_once(calculatorParserOnceFlag, calculatorParserInitialize);
#endif
}
